# devmate

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml  start.bat
docs/: internal_fastapi_guidelines.md
src/: agent.py  chat.html  chat_server.py  config_loader.py  mcp_client.py  mcp_server.py  rag_tool.py
