[project]
name = "devmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "modelscope>=1.35.3",
    "numpy>=2.4.4",
    "sentence-transformers>=5.3.0",
    "tavily>=1.1.0",
    "tiktoken>=0.12.0",
    "tomli>=2.4.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

