[project]
name = "devmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "numpy>=2.4.4",
    "tomli>=2.4.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
