[project]
name = "devmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "modelscope>=1.35.3",
    "numpy>=2.4.4",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pyjson>=1.4.1",
    "pysqlite3>=0.6.0",
    "sentence-transformers>=5.3.0",
    "tavily-python>=0.7.23",
    "tomli>=2.4.1",
    "typing>=3.10.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
